--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'France -- History -- Louis XIV, 1643-1715'
 - !lcc 'HV'
 - !lcsh 'France -- Court and courtiers'
+- GITenberg
 title: 'Princes and Poisoners: Studies of the Court of Louis XIV'
 url: http://www.gutenberg.org/ebooks/43238
